# myfplll

./: .gitignore  CMakeLists.txt  CompilerOptions.txt  Libraries.txt  data.txt  det3.txt  example.txt  test.cpp
cmake/: FindEigen3.cmake  FindGMP.cmake
plll/include/plll/: arithmetic-gmp.hpp  arithmetic.hpp  matrix.hpp
svp/: CMakeLists.txt
svp/src/: svp.cpp  svp2.cpp
svp/src/kudrin/: ksvp.cpp  ksvp.h  main2.cpp
